# riderX

./: .gitignore  package-lock.json  package.json  turbo.json
configs/: docker-compose.yaml  nginx.conf  prometheus.yml
configs/k8s/: driver-service-deployment.yaml  payment-service-deployment.yaml  ride-service-deployment.yaml  riderx-ingress.yaml
services/: requirements.txt  rider.py
services/data-pipeline/: Dockerfile  connections  extract_firebase_data.py  pyproject.toml  train_xgboost.py
services/driver-service/: Dockerfile  cloudbuild.yaml  pyproject.toml
services/driver-service/src/: run.py
services/driver-service/src/driver_service/: __init__.py  driver.py
services/driver-service/src/helper_func/: helpers.py  metrics.py
services/driver-service/tests/: test_driver_service.py
services/payment-service/: =1.24.0  Dockerfile  cloudbuild.yaml  pyproject.toml  requirements.txt
services/payment-service/src/payment_service/: payment.py
services/payment-service/tests/: test_payment_service.py
services/ride-service/: Dockerfile  cloudbuild.yaml  pyproject.toml  requirements.txt
services/ride-service/src/: run.py
services/ride-service/src/helper_func/: helpers.py  metrics.py
services/ride-service/src/rider_services/: ride.py
services/shared-utils/: pyproject.toml
services/shared-utils/connections/: __init__.py  connections.py
services/shared-utils/haversine/: __init__.py  haversine.py
