[project]
name = "shared-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Oviemena",email = "okpowoduoviemena999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "redis-py-cluster>=2.1.3",
    "firebase-admin>=6.6.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
